#1653 Implemented and tested the issue requirements